//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  full_name String [not null]
  age Int [not null]
  language_preference String
  diet_restrictions String
  experience String
  remarks String
  role Role [not null]
  location_id String
  location Location
  parent_phone_number String
  enrollments Enrollment [not null]
  teachings Teaching [not null]
  attendances Attendance [not null]
  sessionEvaluations SessionEvaluation [not null]
  finalEvaluations FinalEvaluation [not null]
  evaluationsGiven FinalEvaluation [not null]
  gamificationPoints GamificationPoints [not null]
  userBadges UserBadge [not null]
  parentAccounts ParentAccount [not null]
  children ParentAccount [not null]
  externalAccounts ExternalStudentAccount [not null]
  announcements Announcement [not null]
  studentKeywordProgresses StudentKeywordProgress [not null]
  studentGameLearningGoalLogs StudentGameLearningGoalLog [not null]
  gameSessions GameSession [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Curriculum {
  id String [pk]
  title String [not null]
  program_type String [not null]
  difficulty_level Int [not null]
  classes Class [not null]
  lessons Lesson [not null]
  levels Level [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Class {
  id String [pk]
  name String [not null]
  curriculum_id String
  curriculum Curriculum
  location_id String
  location Location
  enrollments Enrollment [not null]
  sessions Session [not null]
  announcements Announcement [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Lesson {
  id String [pk]
  curriculum_id String [not null]
  curriculum Curriculum [not null]
  title String [not null]
  description String [not null]
  keywords LessonKeyword [not null]
  learning_objectives LessonObjective [not null]
  sessions Session [not null]
  resources Resources [not null]
  questions Question [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Session {
  id String [pk]
  class_id String [not null]
  class Class [not null]
  lesson_id String [not null]
  lesson Lesson [not null]
  location_id String
  location Location
  date DateTime [not null]
  start_time DateTime [not null]
  end_time DateTime [not null]
  teachings Teaching [not null]
  attendances Attendance [not null]
  sessionEvaluations SessionEvaluation [not null]
  gameSessions GameSession [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Teaching {
  id String [pk]
  session_id String [not null]
  session Session [not null]
  user_id String [not null]
  user User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Enrollment {
  id String [pk]
  user_id String [not null]
  user User [not null]
  class_id String [not null]
  class Class [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Attendance {
  id String [pk]
  session_id String [not null]
  user_id String [not null]
  present Boolean
  late Boolean
  excused Boolean
  note String
  timestamp DateTime [not null]
  session Session [not null]
  user User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime

  indexes {
    (session_id, user_id) [unique]
  }
}

Table SessionEvaluation {
  session_id String [not null]
  user_id String [not null]
  participation_score Int [not null]
  understanding_score Int [not null]
  collaboration_score Int [not null]
  problem_solving_score Int [not null]
  task_completion_score Int [not null]
  session Session [not null]
  user User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime

  indexes {
    (session_id, user_id) [pk]
  }
}

Table FinalEvaluation {
  id String [pk]
  user_id String [not null]
  evaluator_id String
  metrics Json [not null]
  proficiency ProficiencyLevel [not null]
  user User [not null]
  evaluator User
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Resources {
  id String [pk]
  url String [not null]
  type ResourceType [not null]
  language String [not null]
  lesson_id String [not null]
  lesson Lesson [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Keyword {
  id String [pk]
  name String [unique, not null]
  description String
  lessons LessonKeyword [not null]
  questions Question [not null]
  studentKeywordProgresses StudentKeywordProgress [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table LessonKeyword {
  lesson_id String [not null]
  keyword_id String [not null]
  lesson Lesson [not null]
  keyword Keyword [not null]

  indexes {
    (lesson_id, keyword_id) [pk]
  }
}

Table LessonObjective {
  id String [pk]
  lesson_id String [not null]
  lesson Lesson [not null]
  objective String [not null]
  descriptions Json [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table ParentAccount {
  id String [pk]
  parent_id String [not null]
  student_id String [not null]
  parent User [not null]
  student User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table ExternalStudentAccount {
  id String [pk]
  student_id String [not null]
  platform_name String [not null]
  credentials String [not null]
  student User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table GamificationPoints {
  id String [pk]
  user_id String [not null]
  category String [not null]
  points Int [not null]
  description String
  awarded_by String
  user User [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Badge {
  id String [pk]
  name String [not null]
  icon String [not null]
  description String [not null]
  userBadges UserBadge [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table UserBadge {
  id String [pk]
  user_id String [not null]
  badge_id String [not null]
  user User [not null]
  badge Badge [not null]
  created_at DateTime [default: `now()`, not null]
  deleted_at DateTime
}

Table Location {
  id String [pk]
  name String [not null]
  address String [not null]
  users User [not null]
  classes Class [not null]
  sessions Session [not null]
  announcements Announcement [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Announcement {
  id String [pk]
  message String [not null]
  class_id String
  class Class
  location_id String
  location Location
  author_id String
  author User
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  deleted_at DateTime
}

Table Level {
  id String [pk]
  curriculum_id String [not null]
  curriculum Curriculum [not null]
  level_number Int [not null]
  title String
  description String
  questions Question [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Question {
  id String [pk]
  lesson_id String [not null]
  lesson Lesson [not null]
  keyword_id String [not null]
  keyword Keyword [not null]
  level_id String [not null]
  level Level [not null]
  question_text String [not null]
  answers Json [not null]
  correct_answer_index Int [not null]
  explanation_correct_answer String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Game {
  id String [pk]
  name String [unique, not null]
  type String [not null]
  description String
  learningGoals GameLearningGoal [not null]
  studentLearningGoalLogs StudentGameLearningGoalLog [not null]
  gameSessions GameSession [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table GameLearningGoal {
  id String [pk]
  game_id String [not null]
  game Game [not null]
  goal_description String [not null]
  studentLearningGoalLogs StudentGameLearningGoalLog [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table StudentKeywordProgress {
  id String [pk]
  student_id String [not null]
  student User [not null]
  keyword_id String [not null]
  keyword Keyword [not null]
  learning_progress Int [not null, default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table StudentGameLearningGoalLog {
  id String [pk]
  student_id String [not null]
  student User [not null]
  game_id String [not null]
  game Game [not null]
  goal_id String [not null]
  learningGoal GameLearningGoal [not null]
  achieved_at DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table GameSession {
  id String [pk]
  student_id String [not null]
  student User [not null]
  game_id String [not null]
  game Game [not null]
  session_id String
  session Session
  started_at DateTime [not null]
  ended_at DateTime
  durationSeconds Int
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Enum Role {
  ADMIN
  TEACHER
  STUDENT
  PARENT
  COORDINATOR
}

Enum ProficiencyLevel {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

Enum ResourceType {
  SLIDES
  KAHOOT
}

Ref: User.location_id > Location.id

Ref: Class.curriculum_id > Curriculum.id

Ref: Class.location_id > Location.id

Ref: Lesson.curriculum_id > Curriculum.id

Ref: Session.class_id > Class.id

Ref: Session.lesson_id > Lesson.id

Ref: Session.location_id > Location.id

Ref: Teaching.session_id > Session.id [delete: Cascade]

Ref: Teaching.user_id > User.id [delete: Cascade]

Ref: Enrollment.user_id > User.id [delete: Cascade]

Ref: Enrollment.class_id > Class.id [delete: Cascade]

Ref: Attendance.session_id > Session.id

Ref: Attendance.user_id > User.id

Ref: SessionEvaluation.session_id > Session.id

Ref: SessionEvaluation.user_id > User.id

Ref: FinalEvaluation.user_id > User.id

Ref: FinalEvaluation.evaluator_id > User.id

Ref: Resources.lesson_id > Lesson.id

Ref: LessonKeyword.lesson_id > Lesson.id

Ref: LessonKeyword.keyword_id > Keyword.id

Ref: LessonObjective.lesson_id > Lesson.id

Ref: ParentAccount.parent_id > User.id

Ref: ParentAccount.student_id > User.id

Ref: ExternalStudentAccount.student_id > User.id

Ref: GamificationPoints.user_id > User.id

Ref: UserBadge.user_id > User.id

Ref: UserBadge.badge_id > Badge.id

Ref: Announcement.class_id > Class.id

Ref: Announcement.location_id > Location.id

Ref: Announcement.author_id > User.id

Ref: Level.curriculum_id > Curriculum.id

Ref: Question.lesson_id > Lesson.id

Ref: Question.keyword_id > Keyword.id

Ref: Question.level_id > Level.id

Ref: GameLearningGoal.game_id > Game.id

Ref: StudentKeywordProgress.student_id > User.id

Ref: StudentKeywordProgress.keyword_id > Keyword.id

Ref: StudentGameLearningGoalLog.student_id > User.id

Ref: StudentGameLearningGoalLog.game_id > Game.id

Ref: StudentGameLearningGoalLog.goal_id > GameLearningGoal.id

Ref: GameSession.student_id > User.id

Ref: GameSession.game_id > Game.id

Ref: GameSession.session_id > Session.id